hphp/hack/test/typecheck/reactive/conditional_reactivity2.php.exp
File "conditional_reactivity2.php", line 8, characters 3-15:
Reactive functions can only call other reactive functions. (Typing[4200])
File "conditional_reactivity2.php", line 11, characters 10-20:
This function is non-reactive.
